# Parcer

./: .gitignore  hh.sqbpro  hh.sqlite  pyproject.toml
scripts/: refresh_cache.py  run_parser.py  test_fetch.py  test_init_db.py  test_parse_vacancy.py  test_save_html.py  test_save_one.py  test_sqlite.py
src/hhru_parser/: main.py
src/hhru_parser/db/: __init__.py  cache.py  init_db.py  models.py  save_vacancy.py
src/hhru_parser/methods/: __init__.py  base.py  http.py  parse_vacancy.py  search.py
src/hhru_parser/stats/: compute_by_vacancy.py
